# camera_stream_ws

./: Cargo.toml  README.md
builds/arm-apple/: camera_stream_ws
builds/linux86_64/: camera_stream_ws  config.json
src/: config.rs  main.rs
web/: index.html
