[package]
name = "camera_stream_ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
anyhow = "1.0"
futures-util = "0.3"
opencv = "0.96.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
